--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.2.1
   firebase_core: ^2.30.0
   cloud_firestore: ^4.17.0
+  firebase_auth: ^4.19.2
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
