--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.17.0
   firebase_auth: ^4.19.2
   google_sign_in: ^6.2.1
+  logger: ^2.2.0
 
 dev_dependencies:
   flutter_test:
