--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   http: ^1.2.1
-  firebase_core: ^2.30.0
-  cloud_firestore: ^4.17.0
-  firebase_auth: ^4.19.2
+  firebase_core: ^2.30.1
+  cloud_firestore: ^4.17.2
+  firebase_auth: ^4.19.4 
   google_sign_in: ^6.2.1
   logger: ^2.2.0
+  firebase_database: ^10.5.4
 
 dev_dependencies:
   flutter_test:
