--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.2.1
   logger: ^2.2.0
   firebase_database: ^10.5.4
+  web_socket_channel: ^2.4.5
 
 dev_dependencies:
   flutter_test:
