--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   logger: ^2.2.0
   firebase_database: ^10.5.4
   web_socket_channel: ^2.4.5
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
