--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_database: ^10.5.4
   web_socket_channel: ^2.4.5
   socket_io_client: ^2.0.3+1
+  shelf: ^1.4.1
 
 dev_dependencies:
   flutter_test:
