--- a/.gitignore
+++ b/.gitignore
@@ -42,13 +42,13 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# Ignore Files(추가)
-firebase_options.dart
-memo.dart
-android/app/google-services.json
-ios/Runner/Info.plist
-memo
-lib/Container
-lib/ReadyContainer
-package-lock.json
-package.json
+# Ignore Files(>> 이제 private으로 해서 안 해도 됨)
+# firebase_options.dart
+# memo.dart
+# android/app/google-services.json
+# ios/Runner/Info.plist
+# memo
+# lib/Container
+# lib/ReadyContainer
+# package-lock.json
+# package.json
