--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   web_socket_channel: ^2.4.5
   socket_io_client: ^2.0.3+1
   shelf: ^1.4.1
+  shelf_router: ^1.1.4
+  shelf_web_socket: ^1.0.4
 
 dev_dependencies:
   flutter_test:
