--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   logger: ^2.2.0
   firebase_database: ^10.5.4
   socket_io_client: ^2.0.3+1
+  flame: ^1.17.0
+  flame_forge2d: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +71,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - assets/backendimages/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
